<resources>
    <string name="app_name">primer proyecto</string>
    <string name="valoraci_n_de_ciudades">Añadir Ciudad</string>
    <string name="nombre_de_la_ciudad">Nombre de la ciudad</string>
    <string name="pa_s">País</string>
    <string name="fecha_de_visita">Fecha de visita</string>
    <string name="motivo_del_viaje">Motivo del viaje</string>
    <string name="valoraci_n">Valoración:</string>
    <string name="comentarios">Comentarios</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="anterior">Anterior</string>
    <string name="_0_0">0/0</string>
    <string name="siguiente">Siguiente</string>
    <string name="actualizar">actualizar</string>
    <string name="borrar">borrar</string>
    <string name="listado_de_ciudades">Listado de Ciudades</string>
    <string name="listado_de_personas">Listado de Personas</string>
    <string name="ciudad">Ciudad</string>
    <string name="volver">Volver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccionar_participantes">Seleccionar participantes</string>
    <string name="participantes_ninguno">Participantes: ninguno</string>
    <string name="a_adir_viaje">Añadir Viaje</string>
    <string name="add_persona_title">Añadir Persona</string>
    <string name="dni_hint">DNI</string>
    <string name="nombre_hint">Nombre</string>
    <string name="edad_hint">Edad</string>
    <string name="guardar_persona">Guardar</string>
    <string name="lista_visitas">Lista Visitas</string>
    <string name="lista_personas">Lista Personas</string>
    <string name="informaci_n_de_la_persona">Información de la Persona</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="a_adir">Añadir</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre_persona">Nombre Persona</string>
    <string name="dni">DNI</string>
</resources>